--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,11 @@
+blinker==1.9.0
 certifi==2024.8.30
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.0_1/libexec/wheel-0.44.0-py3-none-any.whl#sha256=f49b82715dce6365f75eddcb0a9bb47d0d46feaf14bbc739dfcbd677b7073f5b
+click==8.1.7
+Flask==3.1.0
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+numpy==2.0.2
+Werkzeug==3.1.3
+zipp==3.21.0
